# papanda

./: .env.example  .gitignore  01_history_ai.ipynb  02_data_prep.ipynb  03_stats.ipynb  04_linear_regression.ipynb  05_logistic_regression.ipynb  06_clustering.ipynb  07_neural_networks.ipynb  CHANGELOG.md  DIALECTICS_GUIDE.md  DIALECTICS_GUIDE_KZ.md  DIALECTICS_GUIDE_RU.md  LICENSE  MANIFEST.in  README.md  README.ru.md  README_RU.md  REFERENCE.md  REFERENCE_KZ.md  REFERENCE_RU.md  check_db.py  check_vars.py  config.py  create_bundle.bat  db_check.py  db_dump.txt  fix_db.py  func_examples.ipynb  migrate_titles.py  package-lock.json  package.json  papanda.spec  pyproject.toml  release_notes.txt  requirements.txt  run.py  run_fastapi.bat  run_fastapi.py  scratch_db_query.py  (+15 more)
alembic/: env.py
app/: __init__.py  models.py  papanda.spec  routes.py
docs/: USER_CHANGELOG_RU.md  papanda_manifesto.md
fastapi_app/: check_translations.py  config.py  database.py  demo_data.py  dependencies.py  exceptions.py  logger.py  main.py  schemas.py  uow.py  utils.py
prompts/: 1 главный промпт.md  2 восстановление_промпт.md  3 контекстный_промпт.md  4 формулы_промпт.md  5 статьи_промпт.md  6 противоположности_промпт.md  7 помощник_промпт.md  8 алгоритм_составления_конспекта.json  9 проверка_промпт.md  _метапромпт.md  article_parser.md  dialectics_step1.md  dialectics_step2.md  dialectics_step3.md  dialectics_step4.md  dialectics_step5.md  explain_concept.md  opposites.md  parser.md
scratch/: beruhmt_data.txt  check_app_db.py  check_brain_workout.py  check_db.py  check_db_content.py  (+40 more)
(+416 files in other folders)
