[metadata]
name = papanda
version = 0.0.1a4
author = Ruslan Nazarov
author_email = runaz2007@gmail.com
description = Identifying outliers in data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ruslan-Nazarov/papanda
project_urls =
    Bug Tracker = https://github.com/Ruslan-Nazarov/papanda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src